# micro

./: CMakeLists.txt  EXPLANATION.md  erase_chip.bat  erase_chip.sh  partitions.csv  platformio.ini  sdkconfig.defaults
bootloader_components/bootloader_hooks/: CMakeLists.txt  hooks.c
bootloader_components/custom_boot/: CMakeLists.txt  bootloader_start.c
src/: main.c
